syntax = "proto3";

import "google/protobuf/Empty.proto";

option csharp_namespace = "TodoListService";


service TodoService {
	rpc AddTodo(TodoItem) returns (TodoItem);
	rpc GetTodos(google.protobuf.Empty) returns (stream TodoItem);
} 


message TodoItem {
	int32 id = 1;
	string text = 2;
	bool is_done = 3;
}